<resources>
    <string name="app_name">Multiple Calculator</string>
    <string name="out_message">BMI is</string>
    <string name="std_bmi_calculator">Standard BMI Calculator</string>
    <string name="enter_height">Enter your height</string>
    <string name="enter_weight">Enter your weight</string>
    <string name="feet">Feet</string>
    <string name="inches">Inches</string>
    <string name="weight">Pounds</string>
    <string name="bmi_ref_value">
        BMI Categories:
        \nUnderweight ~ 18.5
        \nNormal weight = 18.5–24.9
        \nOverweight = 25–29.9
        \nObesity = BMI of 30 or greater
    </string>
    <string name="text_view_weight">Enter your weight</string>
    <string name="title_activity_bmicalculation">BMICalculation</string>
    <string name="sphere_volume">Volume of sphere</string>
    <string name="cube_volume">Volume of cube</string>
</resources>
